<resources>
    <string name="app_name">گوشت دنیوی</string>
    <string name="app_name_bahraman">زعفران بهرامن</string>
    <string name="app_name_saleinOrder">SaleIn Order</string>
    <string name="app_name_saleintop">تاپ کباب</string>
    <string name="app_name_saleinmeat">گوشت دنیوی</string>
    <string name="app_name_saleindemo">سالین دمو</string>
    <string name="app_name_saleinkonj">پیتزا کنج</string>
    <string name="app_description_jam">جم پارت ((JAMPART با بیش از یک دهه سابقه و با هدف ارائه قطعات و لوازم یدکی داخلی خودرو هایی مانند پیکان شروع به کار کرد. کیفیت کالاهای عرضه شده در همان سال های اولیه فعالیت در سطح بازارهای مرتبط به خوبی شناخته شد و همین موضوع محکم ترین دلیلی بود تا این کمپانی شروع به تولید لوازم یدکی و قطعات خودرو شرکت هایی مانند ایران خودرو و سایپا را به طور رسمی در سال 1390 کند.
چندی پس از فعالیت در زمینه تولید قطعات دو کمپانی قَدَر در صنعت خودروسازی، این شرکت با ثبت برند خود اعتبار و محبوبیت بیشتری را در بازار به خود اختصاص داد. امروزه طیف وسیعی از محصولات عرضه شده با “برند جم پارت” در سراسر بازارهای داخلی یا حتی خارجی به فروش می‌رسند.
به طور کلی، جم پارت تولید  درصد قطعات و لوازم یدکی خودروهای داخلی را بر عهده دارد و فعالیت عمده آن در تایید کیفی، و توزیع لوازم یدکی و قطعات است. در واقع، بیش از ۸۰ درصد کالاهای عرضه شده به سفارش خود جم پارت در کارخانه های  دیگری تولید شده و با بسته بندی جم پارت به مشتری ارائه می‌شود.
جم پارت امروزه با داشتن بیش از سالها فعالیت درخشان در توزیع قطعات و لوازم یدکی با کیفیت ، شبکه گسترده ای از توزیع کنندگان را در سراسر ایران از آن خود کرده است.
جم پارت به عنوان اولین و بزرگترین شرکت تامین لوازم یدکی با طراحی نظام مدیریت موفق به دریافت کیفیت ایزو ۹۰۰۱ (ISO9001) شد تا در سطح بین المللی نیز فعالیت خود را گسترش دهد . این موضوع نشان دهنده پیشتازی و پیشروی این شرکت جهت تعهد به ارائه بهترین محصولات است.
نکته ای که درباره جم پارت وجود دارد این است که این شرکت همچنین واردات برخی از برند های خارجی لوازم یدکی را در ایران به صورت انحصاری توزیع می‌کند؛ بدین صورت که برخی کمپانی های خارجی با سطح کیفیت مطرحی که در سطح بازارهای جهانی دارند از طریق جم پارت وارد کشور میشوند و تنها با لیبل این شرکت در بازار به فروش می‌رسیدند.
این موضوع یکی از دلایل اصلی شناخته شدن جم پارت به عنوان برندی است که محصولات مرغوب خارجی را در اختیار مشتری قرار می‌دهد.
محصولات جم پارت
  محصولات ارائه شده در شرکت جم پارت به صورت کالاهای دارای ضمانت و گارانتی به مشتریان عرضه می‌شود و همین موضوع کمک شایانی در افزایش اعتبار این برند کرده است.
وجود بازارهای تقلبی و به اصطلاح سیاه که در تمامی مراکز خرید و فروش کالاها به وضوح به چشم می‌خورد، اعتبار و محبوبیت برندهای مطرح در سطح کشور را تحت شعاع قرار می‌دهد، خصوصا اگر هدف این بازارهای تقلبی، کپی برداری از این برندها باشد.
متاسفانه بازار لوازم یدکی و قطعات خودرو نیز مستثنی از این موضوع نیست و سالانه محصولات جعلی و تقلبی بسیاری تحت عنوان برند های مرغوب شناخته شده از قبیل جم پارت با کپی برداری از بسته بندی محصولات وارد بازار می‌شود.
عده ای  سودجو کالاهای متفرقه را به جای محصولات شرکتی و اصل معرفی می‌کنند، در مواردی هم دیده شده که این محصولات گاها با بسته بندی اصلی جم پارت عرضه شده اند و به قیمت های بالاتر از نمونه اصل به فروش می‌روند. به همین دلیل مهم است که نسبت به تشخیص کیفیت محصول دقت کافی داشته باشید.
جم پارت ، تنها تولید بخش کوچکی از مجموعه بزرگ کالاهای ارائه شده خود را بر عهده دارد و قسمت اعظمی از آنها به سفارش این کمپانی توسط خط تولید شرکت های دیگر تامین می‌شود.
محصولات ارائه شده توسط جم پارت به دسته بندی های مختلفی تقسیم می‌شوند :
قطعات برقی
قطعات موتور و گیربکس
قطعات سیستم تعلیق
سیستم ترمز و فرمان
سیستم مدیریت موتور
قطعات بدنه خودرو
دسته بندی قطعات ذکر شده برای بسیاری از خودروها از قبیل پژو ۴۰۵، پژو ۲۰۶، پراید، و ال ۹۰ قابل استفاده است.
بسته بندی محصولات جم پارت
در وهله اول، طراحی بسته بندی انحصاری محصولات جم پارت اولین گام در ایجاد یک تمایز نسبت به کالاهای متفرقه می‌باشد اما تنها وجه تمایز برای تفکیک محصولات اصل و تقلبی در بازار به بسته بندی منتهی نمی‌شود. در واقع، نشانه های  بکار رفته در بسته بندی نیز تاثیر گذار هستند. در ادامه به بررسی طراحی بسته بندی محصولات جم پارت می‌پردازیم:
بسته بندی جم پارت
طراحی بسته بندی محصولات این شرکت در قالب جعبه هایی با سایز و ابعاد مختلف بر اساس نوع محصول است. این جعبه ها به رنگ آبی نفتی چاپ شده اند و برند جم پارت به دو زبان انگلیسی و فارسی طراحی و بر روی آنها درج شده است.
لیبل جم پارت
برچسب یا لیبل های هویتی محصول که تمامی اطلاعات و مشخصات محصول را در خود جای داده اولین چیزی است که در نگاه اول بر روی جعبه های جم پارت خودنمایی می‌کند. این لیبل ها تمامی اطلاعات از جمله نام محصول، کد محصول، شماره سریال، بارکد ملی، QR، هولوگرام، و برند شرکت را شامل می‌‌شود.
از دیگر وظایف لیبل ها وکیوم و پلمپ کردن محصول است که مصرف کننده ملزم به جداکردن آن قبل از آنباکسینگ می‌باشد.
QR یا کد پاسخ سریع جم پارت
بارکد ماتریسی یا QR بارکدی با ابعاد مربع شکل است که به صورت ماتریسی طراحی شده اند. این بارکد ها همچنین رمزدار هستند و امکان کپی برداری از آنها وجود ندارد چرا که منحصرا متعلق به شرکت تولید کننده است.
خطوط سیاه بر روی بارکد با الگوریتم های خاصی از قبیل نام برند شرکت، وب سایت، شماره تلفن، شماره پیامک، و … طراحی شده است و با استفاده از اسکنر QR قابل خوانش هستند. استفاده از این تکونولوژی در کنار بالا بردن امنیت محصول از سودجویی افراد متقلب جلوگیری می‌کند.
هولوگرام یا برچسب لیزری نیز از دیگر برچسب هایی است که در لیبل محصولات جم پارت درج شده است. هولوگرام ها برچسب های لیزری دو یا سه بعدی هستند که به رنگ های مختلفی در زاویه های مختلف نور دیده می‌شوند. این هولوگرام ها معمولا به نا برند خود شرکت چاپ می‌شوند و امنیت و کیفیت محصول را کاملا تضمین می‌کنند.
کپی برداری یا چاپ این هولوگرام ها امری غیر ممکن است و به صورت انحصاری برای شرکت ها چاپ می‌شود چرا که علاوه بر نام برند امکان داشتن رمزهایی بر روی آنها وجود دارد که امکان کپی برداری را غیر ممکن می‌سازد.
امروزه محصولات اصل و باکیفیت همگی دارای این برچسب های لیزری هستند تا اصالت محصول خود را به مشتری نشان دهند.
باتوجه به موارد ذکر شده، اگر قصد خرید محصولی از شرکت جم پارت را دارید که فاقد حتی یکی از آیتم های ذکر شده می‌باشد، از خرید آن محصول خودداری کنید.
خرید محصولات جم پارت
همانطور که قبل تر ذکر شد، جم پارت در قالب یک شرکت مادر وظیفه تولید و تایید کیفیت قطعات را بر عهده دارد و بعد از آن، مسئولیت توزیع و فروش به دست نمایندگی های مجاز و فروشگاه های خرده فروش سپرده می‌شود.
نمایندگی های ارائه دهنده محصولات جم  پارت بیشتر به فروش عمده محصولات مشغول هستند و خرده فروشی آنها توسط فروشندگان دیگر انجام می‌شود. البته مواردی هم وجود دارد که مصرف کننده نهایی مستقیما از نمایندگی ها خرید خود را انجام می‌دهد.
لازم به ذکر است که محصولات جم پارت دارای ضمانت اصالت کالا و گارانتی ۱۸ الی ۲۴ ماهه بسته به نوع محصول هستند.

</string>
    <string name="app_name_salein">سالین </string>
    <string name="app_name_saleinjam">بازرگانی جم پارت</string>
    <string name="login_register_text">ورود ثبت نام</string>
    <string name="welcome_text">به اپلیکیشن سفارش گیر سالین خوش آمدید</string>
    <string name="mobile_number">شماره تلفن همراه</string>
    <string name="get_code">تایید و دریافت کد</string>
    <string name="enter_number">لطفا شماره موبایل خود را وارد کنید</string>
    <string name="confirm_code">تایید کد دریافتی</string>
    <string name="send_code_part1">کد تایید برای شماره موبایل </string>
    <string name="send_code_part2">ارسال شد </string>
    <string name="enter_code">کد تایید 5 رقمی را وارد کنید </string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="code_number">کد تایید</string>
    <string name="order_saleIn_application">اپلیکیشن سفارش گیر سالین</string>
    <string name="user_name_text">نام کاربری</string>
    <string name="pass_word_text">رمز عبور</string>
    <string name="ip_local_text">آی پی خارجی سازمان</string>
    <string name="sale_code_text">کد سامانه فروش</string>
    <string name="register">ثبت نام</string>
    <string name="version">1.0.0.8</string>
    <string name="login">ورود</string>
    <string name="get_data_from_server">در حال دریافت اطلاعات از سرور</string>
    <string name="complete_information">تکمیل اطلاعات</string>
    <string name="no">خیر</string>
    <string name="ok">بله</string>
    <string name="returned">بازگشت</string>
    <string name="firstname_lastname_customer">نام و نام خانواگی </string>
    <string name="firstname_lastname_customer_description">نام و نام خانواگی تحویل گیرنده را وارد کنید</string>
    <string name="phone_number_customer">شماره موبایل</string>
    <string name="phone_number_customer_description">شماره موبایل تحویل گیرنده را وارد کنید</string>
    <string name="address_customer">آدرس </string>
    <string name="Plaque_customer">پلاک </string>
    <string name="man">مرد </string>
    <string name="woman">زن </string>
    <string name="logout">خروج از حساب </string>
    <string name="register_information">ثبت اطلاعات </string>
    <string name="register_gps">ثبت موقعیت </string>
    <string name="info_account">اطلاعات کاربری </string>
    <string name="setting">تنظیمات </string>
    <string name="first_last_name">نام و نام خانوادگی </string>
    <string name="phone_number_account">شماره تلفن همراه </string>
    <string name="add_credit">افزایش اعتبار کیف پول </string>
    <string name="my_comment">نظرات من</string>
    <string name="my_order">پیگیری سفارشات
    </string>
    <string name="search_product">جستجوی نام کالا</string>
    <string name="name_customer">نام مشترک</string>
    <string name="sum_price">جمع مبلغ</string>
    <string name="rial_0">0 ریال</string>
    <string name="pure_price">جمع خالص</string>
    <string name="description">توضیحات</string>
    <string name="continue_">ادامه</string>
    <string name="confirm_pay">تایید نهایی و پرداخت</string>
    <string name="type_pay">روش پرداخت</string>
    <string name="online_pay">پرداخت آنلاین</string>
    <string name="online_pay_description">درگاه آسان پرداخت</string>
    <string name="pay_place">پرداخت در محل</string>
    <string name="pay_place_description">پرداخت نقدی یا کارتخوان در محل مشتری</string>
    <string name="pay_cash">پرداخت در صندوق</string>
    <string name="pay_cash_description">پرداخت توسط اپراتور صندوق</string>
    <string name="use_credit_club">استفاده از اعتبار باشگاه</string>
    <string name="register_order">ثبت سفارش</string>
    <string name="address">آدرس</string>
    <string name="add_address"> افزودن آدرس</string>
    <string name="choose_address">انتخاب آدرس</string>
    <string name="title_address">عنوان آدرس</string>
    <string name="detail_address">جزییات آدرس</string>
    <string name="type_order">نوع سفارش</string>
    <string name="api_key">AIzaSyBtqQBKEW7fvUihpkqdPtoK4i39-WZGxRw</string>
    <string name="launcher_toolbar_title">دریافت سفارشات</string>
    <string name="launcher_toolbar_get_out_button">بیرون بر</string>
    <string name="launcher_toolbar_in_Organization">داخل سالن</string>
    <string name="launcher_toolbar_edittext_hint">غذای مورد نظر را جستجو کنید</string>
    <string name="header_order_name">نام</string>
    <string name="header_order_count">تعداد </string>
    <string name="header_order_sumPrice">جمع مبلغ </string>
    <string name="header_order_number_table"> شماره میز </string>
    <string name="bottom_header_order_totalPrice"> جمع خالص فاکتور</string>
    <string name="bottom_header_order_discount">تخفیف</string>
    <string name="bottom_header_order_service">سرویس</string>
    <string name="bottom_header_order_sumPrice">جمع فاکتور</string>
    <string name="bottom_header_order_people_count">تعداد</string>
    <string name="launcher_order_delete">حذف فاکتور</string>
    <string name="launcher_order_edit">ویرایش فاکتور</string>
    <string name="launcher_order_delivery">تحویل میز</string>
    <string name="launcher_order_print">چاپ</string>
    <string name="complete_order">تکمیل سفارش</string>
    <string name="launcher_order_editText_hint">توضیحات</string>
    <string name="launcher_order_customer_title">توضیحات شما </string>
    <string name="show_detail_title_description">توضیحات</string>
    <string name="link_KitGroup">تولید شده توسط <a href="http://www.kitgroup.ir/">کیت گروپ</a></string>
    <string name="show_detail_comment_customer_description1">سس مایونز کم چرب استفاده کنید</string>
</resources>