<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tapkabab"
        android:clickable="true"
        android:focusable="true">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:elevation="@dimen/login_toolbar_elevation"
            tools:targetApi="lollipop">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/login_register_text"
                android:textColor="@color/medium_color"
                android:textSize="@dimen/text_normal_mobile_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


        <TextView

            android:layout_below="@+id/relativeLayout"

            android:layout_marginTop="18dp"
            android:id="@+id/tv_welcome"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"

            android:layout_marginEnd="22dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xx_large_mobile_size"
            />



        <TextView
            android:layout_marginTop="220dp"
            android:layout_below="@+id/relativeLayout"
            android:textStyle="bold"
            android:gravity="right"
            android:id="@+id/tvEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:text="@string/enter_number"
            android:textColor="@color/medium_color"
            android:textSize="@dimen/text_normal_mobile_size"
            />


        <EditText
            android:inputType="number"
            android:gravity="right"
            android:id="@+id/edtMobile"
            android:fontFamily="@font/iransans"
            android:textSize="12sp"
            android:textColor="@color/medium_color"
            android:hint="@string/phone_number_account"
            android:layout_marginTop="@dimen/margin4"
            android:background="@drawable/background_edittext"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_below="@+id/tvEnterMobile"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <ProgressBar

            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone" />


        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="8dp"
           android:layout_below="@+id/edtMobile"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_height_size"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/bottom_background_inActive_color"
            android:enabled="false"
            android:fontFamily="@font/iransans"
            android:text="@string/get_code"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/box_radius"
            tools:ignore="UnusedAttribute" />

    </RelativeLayout>

</layout>