<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/login_toolbar_elevation"
            tools:targetApi="lollipop">


            <TextView
                android:id="@+id/tvLogin"
                style="@style/bold_text"
                android:layout_centerInParent="true"
                android:text="@string/login_register_text" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_welcome"
            style="@style/large_bold_text"
            android:layout_width="match_parent"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginStart="22dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="22dp"
            android:gravity="center" />

        <ImageView

            android:id="@+id/image_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/tv_welcome"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/tvEnterMobile"
            style="@style/bold_text"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="22dp"
            android:gravity="right"
            android:text="@string/enter_number" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_editText"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEnterMobile"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="@dimen/margin8"
            android:layout_marginEnd="22dp">

            <EditText
                android:id="@+id/edtMobile"
                style="@style/large_bold_text"
                android:layout_width="match_parent"
                android:background="@drawable/background_edittext"
                android:fontFamily="@font/iransans"
                android:gravity="center"
                android:hint="@string/phone_number_account"
                android:inputType="number"
                android:maxLength="11"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:indeterminateTint="@color/color_accent"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/edtMobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/bold_text_bottom"
            android:layout_width="360dp"
            android:layout_below="@+id/layout_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@color/bottom_background_inActive_color"
            android:enabled="false"
            android:fontFamily="@font/iransans"
            android:text="@string/get_code"
            app:backgroundTint="@null"
            app:cornerRadius="@dimen/box_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout

            android:id="@+id/layoutRule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin2"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/margin2"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_tv_rules2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="آن را می پذیرم."
                android:textColor="@color/medium_color"
                android:textSize="11dp" />

            <TextView
                android:id="@+id/btn_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  قوانین و مقررات "
                android:textColor="@color/color_accent"
                android:textSize="11dp" />

            <TextView
                android:id="@+id/login_tv_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/medium_color"
                android:textSize="11dp" />

            <CheckBox
                android:buttonTint="@color/color_accent"
                android:id="@+id/checkbox"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="1dp"
                android:checked="true" />
        </LinearLayout>

    </RelativeLayout>

</layout>